--- a/src/index.htm
+++ b/src/index.htm
@@ -7,7 +7,7 @@
     <br />
     Me at the waterpark
     <br />
-    <H2>The pipeline is working</H2>
+    <H2>Welcome to your site, Liam</H2>
     <H2>About Me</H2>
     <b>I'm</b> a pokeholic, but I've <br />
     <b>never</b> caught a Mewtwo. I'm <br />
