relevant website updates

--- a/src/index.htm
+++ b/src/index.htm
@@ -2,8 +2,8 @@
     <title>FishLiam</title>
 </head>
 <body>
-    <H1>WELCOME TO MY WEBSITE</H1>
-    <img src="./liam_profile.png" />
+    <H1>THIS SITE IS GROUNDED</H1>
+    <img src="./codfather-1.jpg" />
     <br />
     Me at the waterpark
     <br />
